--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,8 @@ timezone: "Asia/Seoul"
 logo: "/assets/images/logo.jpg"
 cover: "/assets/images/background_image.jpg"
 name: 'cwyang'
-author:
-  name: 양철웅
-  bio: Chul-Woong Yang
+author: 양철웅
+author_bio: Chul-Woong Yang
 author_image: "/assets/images/author.jpg"
 
 twitter_handle: '@cwyang'
