--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ name: 'cwyang'
 author: 양철웅
 author_bio: Chul-Woong Yang
 author_image: "/assets/images/author.jpg"
-
+google_analytics: UA-6183151-15
 twitter_handle: '@cwyang'
 
 # Build settings
