--- a/_config.yml
+++ b/_config.yml
@@ -1,31 +1,18 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+# Build settings
+gems:
+  - jemoji
+  - jekyll-paginate
+  - jekyll-gist
+  - jekyll-sitemap
+  - jekyll-toc
 
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: cwyang's blog
-#email: cwyang
-description: > # this means to ignore newlines until "baseurl:"
+description: > # this means to ignore newlines until "email:"
   short essays
-baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://cwyang.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: cwyang
 github_username:  cwyang
-
-paginate:	10
-timezone: "Asia/Seoul"
-
-#blog logo
 logo: "/assets/images/logo.jpg"
 cover: "/assets/images/background_image.jpg"
 name: 'cwyang'
@@ -35,29 +22,15 @@ author_image: "/assets/images/author.jpg"
 google_analytics: UA-6183151-15
 twitter_handle: '@cwyang'
 
-# Build settings
-markdown: kramdown
-theme: minima
-plugins:
-  - jekyll-feed
-  - jekyll-paginate
-  - jekyll-gist
-  - jekyll-sitemap
-  - jekyll-seo-tag
-  - jekyll-toc
-  - jemoji
+paginate:	15
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+permalink: /:year/:month/:day/:title.html
+
+timezone: "Asia/Seoul"
+
+
+#################################
+
 social:
   - icon:	facebook
     url:	https://facebook.com/cwyang72
