--- a/hugo/themes/simple/hugo.toml
+++ b/hugo/themes/simple/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://github.com/cwyang/hugo-simple'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 
