--- a/hugo/themes/simple/theme.toml
+++ b/hugo/themes/simple/theme.toml
@@ -1,31 +1,26 @@
-name = 'Theme name'
+name = 'Simple Hugo'
 license = 'MIT'
-licenselink = 'https://github.com/owner/repo/LICENSE'
-description = 'Theme description'
+licenselink = 'https://github.com/cwyang/hugo-simple/LICENSE'
+description = 'Simple Hugo Theme'
 
 # The home page of the theme, where the source can be found
-homepage = 'https://github.com/owner/repo'
+homepage = 'https://github.com/cwyang/hugo-simple'
 
 # If you have a running demo of the theme
-demosite = 'https://owner.github.io/repo'
+demosite = 'https://cwyang.github.io/'
 
 # Taxonomy terms
 tags = ['blog', 'company']
 features = ['some', 'awesome', 'features']
 
 # If the theme has multiple authors
-authors = [
-  {name = 'Name of author', homepage = 'Website of author'},
-  {name = 'Name of author', homepage = 'Website of author'}
-]
+#authors = [
+#  {name = 'Name of author', homepage = 'Website of author'},
+#  {name = 'Name of author', homepage = 'Website of author'}
+#]
 
 # If the theme has a single author
 [author]
-  name = 'Your name'
-  homepage = 'Your website'
+  name = 'Chul-Woong Yang'
+  homepage = 'cwyang.github.io'
 
-# If porting an existing theme
-[original]
-  author = 'Name of original author'
-  homepage = 'Website of original author'
-  repo = 'https://github.com/owner/repo'
