--- a/hugo/hugo.yaml
+++ b/hugo/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: http://cwyang.github.io
+baseURL: https://cwyang.github.io
 disablePathToLower: true
 languageCode: en-us
 title: A Tale That Wasn't Left
