--- a/hugo/themes/simple/hugo.toml
+++ b/hugo/themes/simple/hugo.toml
@@ -8,6 +8,11 @@ pageRef = '/'
 weight = 10
 
 [[menus.main]]
+name = 'Categories'
+pageRef = '/categories/'
+weight = 20
+
+[[menus.main]]
 name = 'Tags'
 pageRef = '/tags/'
 weight = 30
